--- a/packages/stateofjs/lib/stylesheets/_survey_page.scss
+++ b/packages/stateofjs/lib/stylesheets/_survey_page.scss
@@ -1,4 +1,3 @@
-
 .survey-item-contents {
   @include small {
     text-align: center;
@@ -17,6 +16,9 @@
     display: block;
     width: 100%;
   }
+  &-small {
+    max-width: 250px;
+  }
 }
 .survey-name {
   @include small {
@@ -32,11 +34,12 @@
   h3 {
     font-size: $large-font;
   }
-  margin-top: $spacing*2;
+  margin-top: $spacing * 2;
   // p, li{
   //   font-size: $smallish-font;
   // }
-  ul:last-child, p:last-child{
+  ul:last-child,
+  p:last-child {
     margin-bottom: 0;
   }
 }
