Track save time for measuring performance

--- a/packages/stateofjs/lib/stylesheets/_buttons.scss
+++ b/packages/stateofjs/lib/stylesheets/_buttons.scss
@@ -65,6 +65,7 @@
     }
     .datatable-list & {
       color: $text-color-inverted;
+      border-color: $text-color-inverted;
     }
     .modal-dialog &{
       color: $text-color-inverted;
