--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -77,7 +77,7 @@ $dark-border-color: $greyDark;
 
 $text-color: $grey;
 $text-color-dark: $greyMediumish;
-$text-color-inverted: $greyDarkish;
+$text-color-inverted: $greyDarker;
 
 $link-color: $active-color;
 $hover-color: $contrast-color;
