Add cache system for locales and entities

--- a/packages/stateofjs/lib/stylesheets/_admin.scss
+++ b/packages/stateofjs/lib/stylesheets/_admin.scss
@@ -1,3 +1,11 @@
-.debug-database, .admin-stats{
-  background: $white; 
+.debug-database,
+.admin-stats {
+  background: $white;
+  padding: $spacing;
+  h3{
+    color: $text-color-inverted;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
