--- a/packages/stateofjs/lib/stylesheets/_buttons.scss
+++ b/packages/stateofjs/lib/stylesheets/_buttons.scss
@@ -63,7 +63,7 @@
     &--active {
       border-style: solid;
     }
-    .datatable-list & {
+    .admin-content & {
       color: $text-color-inverted;
       border-color: $text-color-inverted;
     }
