--- a/packages/stateofjs/lib/stylesheets/_admin.scss
+++ b/packages/stateofjs/lib/stylesheets/_admin.scss
@@ -1,11 +1,16 @@
 .debug-database,
-.admin-stats {
+.admin-content {
   background: $white;
   padding: $spacing;
-  h3{
+  color: $text-color-inverted;
+  h3 {
     color: $text-color-inverted;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: $spacing;
+    .dropdown {
+      display: inline-block;
+    }
   }
 }
