Various small improvements; work on JS2020 outline

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -68,6 +68,9 @@
     padding: $spacing/2;
     order: 1;
     margin-bottom: $spacing/2;
+    p:last-child{
+      margin: 0;
+    }
   }
   .form-submit-actions {
     display: flex;
