Various small updates; update projects list

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -2,10 +2,11 @@
   base colors
 \*****************************************************************************/
 
+$greyLightest: #edf1f1;
 $greyLight: #e0e4e4;
 $grey: #e1e1e1;
 $greyMedium: #cecdcc;
-$greyMediumish: #9e9c9a;
+$greyMediumish: #bdb9b7;
 $greyMediumer: #616868;
 $greyDark:rgba(255, 255, 255, 0.4);
 $greyDarkish: rgba(255, 255, 255, 0.1);
