--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -134,3 +134,16 @@
   background-color: $grey;
   color: $greyDarker;
 }
+
+.rbt-menu {
+  a {
+    &,
+    &:link,
+    &:visited {
+      color: $text-color-inverted;
+    }
+    &:hover{
+      background: $bg-color-lightest;
+    }
+  }
+}
