--- a/packages/stateofjs/lib/stylesheets/_surveys.scss
+++ b/packages/stateofjs/lib/stylesheets/_surveys.scss
@@ -37,7 +37,7 @@
   margin: 0 auto;
   margin-bottom: $spacing * 3;
 }
-.surveys-noopen {
+.surveys-none {
   text-align: center;
   font-size: $medium-font;
 }
