Handle preview surveys better

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -28,6 +28,7 @@ $greenLighter: #e7ffed;
 $greenLight: #acffc3;
 $green: #85eba2;
 $greenDark: #59df7f;
+$greenTransparent: rgba(89, 223, 127, 0.3);
 
 $tealLighter: #94eeee;
 $tealLight: #65e0e0;
