--- a/packages/stateofjs/lib/stylesheets/_global.scss
+++ b/packages/stateofjs/lib/stylesheets/_global.scss
@@ -215,3 +215,31 @@ Page-specific styles
     }
   }
 }
+
+/* Hides elements in the UI, but still allows them to be read by screen readers. */
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.skip {
+  display: block;
+  padding: 1rem 1rem;
+
+  position: absolute;
+  top: -900px;
+  left: -900px;
+
+  &:focus {
+    display: inline-block;
+    position: static !important;
+    top: 0 !important;
+    left: 0 !important;
+    border: 2px solid white;
+  }
+}
