--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -20,5 +20,6 @@
 @import '_surveys.scss';
 @import '_accounts.scss';
 @import '_score.scss';
+@import '_brackets.scss';
 @import '_admin.scss';
 @import '_rtl_support.scss';
