change color scheme

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -12,16 +12,17 @@ $greyDark:rgba(255, 255, 255, 0.4);
 $greyDarkish: rgba(255, 255, 255, 0.1);
 $greyDarker: #212424;
 
-$blueLighter: #b2bbee;
-$blueLight: #808ee1;
-$blue: #3c52d1;
+$blueLighter: #B2BBEE;
+$blueLight: #808EE1;
+$blue: #576DE7;
 $blueDark: #273aa2;
 
-$pinkLightest: #d3bbf2;
-$pinkLighter: #d68df0;
-$pinkLight: #ec75cb;
+$pinkLightest: #D3BBF2;
+$pinkLighter: #D68DF0;
+$pinkLight: #EC75CB;
 // $pink: #ec2f95; // contrast too low
-$pink: #f649a7; // better contrast
+// $pink: #f649a7; // better contrast
+$pink: #F95DB2;
 // $pink: #f055a9; // even better contrast but looks washed out
 
 $greenLighter: #e7ffed;
@@ -36,15 +37,15 @@ $teal: #41c7c7;
 $tealDark: #2ba7a7;
 $tealDarker: #1d7e7e;
 
-$purpleLight: #b096e7;
-$purple: #7854c3;
-$purpleDark: #57457c;
+$purpleLight: #B096E7;
+$purple: #7854C3;
+$purpleDark: #57457C;
 
 $redLighter: #f8a8a8;
 $redLight: #fc8f8f;
 $red: #fe6a6a;
 $redDark: #ec5555;
-$redDarker: #be3737;
+$redDarker: #D13F3F;
 $redTransparent: rgba(254, 106, 106, 0.3);
 
 $yellow: #fbf34c;
