Work on brackets; switch to vertical brackets

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -27,6 +27,7 @@
     @include font-bold;
     display: flex;
     align-items: center;
+    line-height: 1.7;
     code {
       font-size: $medium-font;
     }
