--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -1,48 +1,88 @@
+.bracket {
+  margin-top: $spacing;
+}
+
 .bracket-current-matchup {
   margin-bottom: $spacing * 2;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  column-gap: $spacing;
+  align-items: center;
 }
 
-.brackets-results {
+.bracket-player {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .btn {
+    white-space: normal !important;
+    flex: 1;
+  }
+}
+
+.bracket-player-name {
+  margin-bottom: 0;
+  font-size: $medium-font;
+  line-height: 1.7;
+}
+
+.bracket-player-description {
+  @include font-regular;
+  font-size: $small-font;
+}
+
+.bracket-results {
+  margin-top: $spacing;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  // display: grid;
+  // grid-template-columns: repeat(8, 1fr);
+}
+
+.bracket-matchgroup {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-}
-
-.brackets-matchgroup {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  flex: 1;
-  margin-right: $spacing;
-}
-
-.brackets-match {
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
   flex: 1;
   margin-bottom: $spacing;
+}
+
+.bracket-match {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex: 1;
+  margin-right: $spacing;
+  &:last-child{
+    margin-right: 0;
+  }
   &-final {
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    .brackets-item {
-      margin-right: $spacing;
+    .bracket-item {
+      margin-bottom: $spacing;
     }
   }
   &-current {
-    .brackets-item {
+    .bracket-item {
       opacity: 1;
       box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
     }
   }
 }
 
-.brackets-item {
+.bracket-item {
   opacity: 0.6;
   border: 1px solid $border-color;
   padding: $spacing/2;
-  margin-bottom: $spacing/2;
+  margin-right: $spacing/2;
   font-size: $small-font;
+  &:last-child{
+    margin-right: 0;
+  }
   &-winner {
     border-color: $contrast-color;
     border-width: 2px;
@@ -51,4 +91,12 @@
     border-color: $contrast-color;
     border-width: 4px;
   }
+}
+
+.bracket-over {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
