--- a/packages/stateofjs/lib/stylesheets/_typography.scss
+++ b/packages/stateofjs/lib/stylesheets/_typography.scss
@@ -1,6 +1,7 @@
 $root-size-mobile: 13px;
 $root-size: 17px;
 
+$smallest-font: 0.6rem;
 $smaller-font: 0.7rem;
 $small-font: 0.8rem;
 $smallish-font: 0.9rem;
