clean up brackets code

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -90,4 +90,8 @@ $hover-color: $contrast-color;
   --text-color: #{$text-color};
   --link-color: #{$link-color};
   --hover-color: #{$link-color};
+  --border-color: #{$border-color};
+  --dark-border-color: #{$dark-border-color};
+  --active-color: #{$active-color};
+  --contrast-color: #{$contrast-color};
 }
