--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -1,9 +1,20 @@
+// height of a bracket item (fixed because we want them to all have the same height)
 $item-height: 80px;
+// gap between two columns
 $horizontal-gap: $spacing;
-$vertical-gap: $spacing/2;
-$vertical-gap-match: $spacing * 3;
+// gap between two bracket items
+$vertical-gap-item: $spacing/2;
+// gap between two matches
+$vertical-gap-match: $spacing * 2;
+// width of the connecting line
 $line-width: $horizontal-gap/2;
-// $vertical-gap-match: $spacing/2;
+
+$highlight-width: 3px;
+$highlight: $highlight-width solid var(--active-color);
+
+@mixin disabled {
+  opacity: 0.4;
+}
 
 .bracket {
   margin-top: $spacing;
@@ -14,7 +25,6 @@ $line-width: $horizontal-gap/2;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-
   column-gap: $spacing;
 }
 
@@ -41,15 +51,9 @@ $line-width: $horizontal-gap/2;
 
 .bracket-results {
   margin-top: $spacing;
-
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: space-between;
   display: grid;
   grid-template-columns: repeat(6, minmax(0, 1fr));
-
   column-gap: $horizontal-gap;
-
   @include small {
     column-gap: $horizontal-gap/2;
   }
@@ -59,18 +63,9 @@ $line-width: $horizontal-gap/2;
   display: flex;
   flex-direction: column;
   flex: 1;
-  // justify-content: space-around;
-
-  // margin-right: $line-width * 2;
   &:last-child {
     margin-right: 0;
   }
-  // padding: (3*$vertical-gap-match)/2 0;
-
-  // &.bracket-matchgroup-level1{
-  // padding: 0;
-  // }
-  // background: rgba(255,0,0,0.2);
   &.bracket-matchgroup-level1 {
     grid-column: 1 / 3;
     grid-row: 1;
@@ -95,10 +90,6 @@ $line-width: $horizontal-gap/2;
   flex: 1;
   justify-content: space-evenly;
   position: relative;
-
-  // background: rgba(0,255,0,0.2);
-  // gap: $vertical-gap;
-
   margin-bottom: $vertical-gap-match;
   &:last-child {
     margin-bottom: 0;
@@ -106,23 +97,13 @@ $line-width: $horizontal-gap/2;
 }
 
 .bracket-item {
-  // background: rgba(0,255,255,0.2);
   height: $item-height;
   @include flex-center;
   background: var(--bg-color);
 
-  .inner {
-    position: relative;
-    @include flex-center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-  }
-
   &.bracket-item-empty {
     border-radius: 3px;
     border: 1px dashed $dark-border-color;
-    .inner:before,
     &:after {
       border-style: dashed;
     }
@@ -130,7 +111,6 @@ $line-width: $horizontal-gap/2;
 
   .btn {
     padding: $spacing/2 !important;
-    // margin-right: $spacing;
     text-align: center;
     white-space: break-spaces !important;
     position: relative;
@@ -141,10 +121,12 @@ $line-width: $horizontal-gap/2;
     display: flex !important;
     z-index: 100;
     font-size: $small-font !important;
-
     @include small {
       font-size: $smallest-font !important;
     }
+  }
+  .btn:disabled {
+    @include disabled;
   }
 
   &-winner {
@@ -157,41 +139,19 @@ $line-width: $horizontal-gap/2;
   }
 
   .bracket-matchgroup-level1 & {
-    margin-bottom: $vertical-gap;
+    margin-bottom: $vertical-gap-item;
   }
 
   &:last-child {
     margin-bottom: 0;
   }
 
-  .bracket-matchgroup-level2 & .inner:before,
   &:after {
     content: ' ';
     display: block;
     position: absolute;
-    border: 0px dashed $dark-border-color;
+    border: 0px dashed var(--dark-border-color);
     border-left: none !important;
-  }
-
-  .inner:before {
-    height: 1px;
-    width: $line-width;
-    left: -$line-width;
-    border-style: solid;
-    border-color: $border-color;
-    border-top-width: 3px;
-    border-bottom-width: 0px !important;
-    top: 50%;
-    transform: translateY(-50%);
-
-    @include small {
-      width: $line-width/2;
-      left: -$line-width/2;
-    }
-  }
-
-  &:after {
-    // height = quarter of the match group height + quarter of the gap
     height: 25%;
 
     width: $line-width;
@@ -204,63 +164,104 @@ $line-width: $horizontal-gap/2;
     border-right-width: 1px;
   }
 
-  &:nth-child(1) {
-    &:after {
-      top: 25%;
-      border-top-width: 1px;
-      border-bottom: none !important;
-    }
+  &.bracket-item-disabled:after {
+    @include disabled;
+  }
+
+  &:nth-child(1):after {
+    top: 25%;
+    border-top-width: 1px;
+    border-bottom: none !important;
   }
 
   // the spacer counts as the second child
-  &:nth-child(3) {
-    &:after {
-      top: 75%;
-      border-bottom-width: 1px;
-      border-top: none !important;
-      transform: translateY(-100%);
+  &:nth-child(3):after {
+    top: 75%;
+    border-bottom-width: 1px;
+    border-top: none !important;
+    transform: translateY(-100%);
+  }
+
+  &.bracket-item-defending {
+    .btn {
+      border: $highlight;
     }
   }
 
   &.bracket-item-winner {
-    border-width: 3px;
-    .inner:before,
+    .btn {
+      border: $highlight;
+    }
     &:after {
-      border-style: solid;
-      border-color: $border-color;
-      border-width: 3px;
+      border: $highlight;
     }
   }
 
-  &.bracket-item-empty {
-    .inner:before {
-      border-style: dashed;
-      border-color: $dark-border-color;
-      border-top-width: 1px;
-    }
-  }
-
-  .bracket-matchgroup-level1 & .inner:before {
-    display: none;
-  }
   .bracket-matchgroup-level1 &:nth-child(1):after {
-    height: calc(25% + #{$vertical-gap}/ 4);
+    height: calc(25% + #{$vertical-gap-item}/ 4);
     // for first level, gap/margin is between each player instead of around
-    top: calc((100% - #{$vertical-gap}) / 4);
+    top: calc((100% - #{$vertical-gap-item}) / 4);
   }
   .bracket-matchgroup-level1 &:nth-child(2):after {
-    height: calc(25% + #{$vertical-gap}/ 4);
+    height: calc(25% + #{$vertical-gap-item}/ 4);
     top: 50%;
     transform: none;
   }
-  .bracket-matchgroup-overall-winner &:after {
+  &.bracket-item-overall-winner {
+    &:after {
+      display: none;
+    }
+  }
+}
+
+.bracket-item-inner {
+  position: relative;
+  @include flex-center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  &:before {
     display: none;
+    content: ' ';
+    position: absolute;
+    border-top: 1px solid var(--dark-border-color);
+    // border-left: none !important;
+    height: 1px;
+    width: $line-width;
+    left: -$line-width;
+    // border-style: solid;
+    // border-color: $border-color;
+    // border-top-width: 3px;
+    // border-bottom-width: 0px !important;
+    top: 50%;
+    transform: translateY(-50%);
+    @include disabled;
+
+    @include small {
+      width: $line-width/2;
+      left: -$line-width/2;
+    }
+
+    .bracket-item-empty & {
+      border-top: 1px dashed var(--dark-border-color);
+    }
+
+    .bracket-item-defending & {
+      border-top: $highlight;
+      width: $line-width + $highlight-width;
+      left: -$line-width - $highlight-width;
+    }
+
+    // only enable the "before" line for level 2
+    .bracket-matchgroup-level2 & {
+      display: block;
+    }
   }
 }
 
 .bracket-spacer {
   height: $vertical-gap-match;
-  // background: rgba(45,45,255,0.2);
   .bracket-matchgroup-level1 & {
     display: none;
   }
