--- a/packages/stateofjs/lib/stylesheets/_variables.scss
+++ b/packages/stateofjs/lib/stylesheets/_variables.scss
@@ -9,8 +9,8 @@ $antsFg: $pink;
   align-items: center;
 }
 
-$border: 1px solid $dark-border-color;
-$border2: 1px dashed $dark-border-color;
+$border: 1px solid var(--dark-border-color);
+$border2: 1px dashed var(--dark-border-color);
 
 $border-radius: 3px;
 
