--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -277,8 +277,7 @@ $highlight: $highlight-width solid var(--active-color);
 }
 
 .bracket-item-name {
-  display: block;
-  margin-bottom: 3px;
+  display: inline;
 }
 .bracket-item-description {
   display: block;
@@ -295,4 +294,20 @@ $highlight: $highlight-width solid var(--active-color);
   top: 100%;
   z-index: 10;
   background: var(--bg-color) !important;
+}
+
+.bracket-item-label{
+
+}
+
+.bracket-item-details-trigger{
+  margin-left: 5px;
+  display: inline-block;
+  background: rgba(255,255,255,0.1);
+  border-radius: 100%;
+  height: 18px;
+  width: 18px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
