--- a/packages/stateofjs/lib/stylesheets/_surveys.scss
+++ b/packages/stateofjs/lib/stylesheets/_surveys.scss
@@ -27,8 +27,11 @@
 }
 .account,
 .contents-narrow {
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
+  @include small {
+    padding: 0 $spacing/2;
+  }
 }
 .surveys {
 }
@@ -98,7 +101,6 @@
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     column-gap: $spacing * 2;
-    
   }
 }
 .section-contents {
@@ -223,10 +225,10 @@
 .survey-message {
   padding: $spacing;
   margin-bottom: $spacing * 2;
-  &.survey-closed{
+  &.survey-closed {
     background: $redTransparent;
   }
-  &.survey-preview{
+  &.survey-preview {
     background: $greenTransparent;
   }
 }
@@ -265,4 +267,52 @@
   &-locale-translator {
     font-size: $smallish-font;
   }
+}
+
+.survey-credits {
+  margin-top: $spacing * 4;
+}
+
+.survey-credits-heading {
+  text-align: center;
+  margin-bottom: $spacing * 2;
+  font-size: $larger-font;
+}
+.survey-credits-items {
+  column-gap: $spacing * 2;
+  row-gap: $spacing * 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  @include small {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.survey-credits-item {
+  display: flex;
+}
+.survey-credits-item-avatar {
+  margin-right: $spacing/2;
+  overflow: hidden;
+  border-radius: 100%;
+  height: 60px;
+  width: 60px;
+  img {
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
+}
+.survey-credits-item-details {
+}
+.survey-credits-item-name {
+  font-size: $large-font;
+  margin-bottom: 3px;
+}
+.survey-credits-item-twitter {
+  margin-bottom: 0;
+  font-size: $small-font;
+}
+.survey-credits-item-role {
+  font-size: $small-font;
+  margin-bottom: 0;
 }
