--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -296,8 +296,27 @@ $highlight: $highlight-width solid var(--active-color);
   background: var(--bg-color) !important;
 }
 
-.bracket-item-label{
+.bracket-item-radio {
+  opacity: 0;
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: -1;
+    opacity: 1;
+  }
 
+  &:hover:not([disabled]),
+  &:focus:not([disabled]) {
+    &:after {
+      background-color: var(--link-color)
+    }
+  }
 }
 
 .bracket-item-details-trigger{
