--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -298,6 +298,8 @@ $highlight: $highlight-width solid var(--active-color);
 
 .bracket-item-radio {
   opacity: 0;
+  cursor: pointer;
+
   &:after {
     content: "";
     display: block;
@@ -307,8 +309,21 @@ $highlight: $highlight-width solid var(--active-color);
     top: 0;
     left: 0;
     cursor: pointer;
-    z-index: -1;
+  }
+}
+
+.bracket-item-label {
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
     opacity: 1;
+    z-index: -1;
   }
 
   &:hover:not([disabled]),
