--- a/packages/stateofjs/lib/stylesheets/_surveys.scss
+++ b/packages/stateofjs/lib/stylesheets/_surveys.scss
@@ -27,7 +27,7 @@
 }
 .account,
 .contents-narrow {
-  max-width: 600px;
+  max-width: 650px;
   margin: 0 auto;
   @include small {
     padding: 0 $spacing/2;
@@ -234,8 +234,8 @@
 }
 
 .translators {
-  max-width: 600px;
   margin: 0 auto;
+  margin-top: $spacing * 2;
   padding: $spacing * 2;
   @include border2;
   @include border-radius;
@@ -267,6 +267,12 @@
   &-locale-translator {
     font-size: $smallish-font;
   }
+}
+
+.translators-help {
+  text-align: center;
+  margin-top: $spacing * 2;
+  font-size: $medium-font;
 }
 
 .survey-credits {
