--- a/packages/stateofjs/lib/stylesheets/_brackets.scss
+++ b/packages/stateofjs/lib/stylesheets/_brackets.scss
@@ -109,6 +109,12 @@ $highlight: $highlight-width solid var(--active-color);
     }
   }
 
+  .bracket-item-button-wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
   .bracket-item-button {
     padding: $spacing/2 !important;
     text-align: center;
@@ -125,6 +131,41 @@ $highlight: $highlight-width solid var(--active-color);
     @include small {
       font-size: $smallest-font !important;
     }
+  }
+
+  .bracket-item-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 600;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    box-sizing: border-box;
+    padding: 0 0.75rem;
+  }
+  
+  .bracket-item-details-trigger {
+    margin-left: 5px;
+    display: inline-block;
+    background: rgba(255,255,255,0.1);
+    border-radius: 100%;
+    height: 18px;
+    width: 18px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 99999;
   }
 
   &-winner {
@@ -312,36 +353,3 @@ $highlight: $highlight-width solid var(--active-color);
   }
 }
 
-.bracket-item-label {
-  &:after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-    opacity: 1;
-    z-index: -1;
-  }
-
-  &:hover:not([disabled]),
-  &:focus:not([disabled]) {
-    &:after {
-      background-color: var(--link-color)
-    }
-  }
-}
-
-.bracket-item-details-trigger{
-  margin-left: 5px;
-  display: inline-block;
-  background: rgba(255,255,255,0.1);
-  border-radius: 100%;
-  height: 18px;
-  width: 18px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
