--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -21,5 +21,8 @@
 @import '_accounts.scss';
 @import '_score.scss';
 @import '_brackets.scss';
+@import '_credits.scss';
+@import '_translators.scss';
+@import '_faq.scss';
 @import '_admin.scss';
 @import '_rtl_support.scss';
