--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -89,7 +89,7 @@ $hover-color: $contrast-color;
   --bg-color: #{$bg-color};
   --text-color: #{$text-color};
   --link-color: #{$link-color};
-  --hover-color: #{$link-color};
+  --hover-color: #{$contrast-color};
   --border-color: #{$border-color};
   --dark-border-color: #{$dark-border-color};
   --active-color: #{$active-color};
