--- a/packages/stateofjs/lib/stylesheets/_surveys.scss
+++ b/packages/stateofjs/lib/stylesheets/_surveys.scss
@@ -233,92 +233,12 @@
   }
 }
 
-.translators {
-  margin: 0 auto;
-  margin-top: $spacing * 2;
-  padding: $spacing * 2;
-  @include border2;
-  @include border-radius;
-  &-heading {
-    text-align: center;
-    font-size: $large-font;
-  }
-  &-locales {
-    @include large {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      column-gap: $spacing;
-      row-gap: $spacing;
-    }
-  }
-  &-locale {
-  }
-  &-locale-heading {
-    font-size: $smallish-font;
-    // margin-bottom: $spacing/4;
-    display: inline;
-    &::after {
-      content: ': ';
-    }
-  }
-  &-locale-translators {
-    display: inline;
-  }
-  &-locale-translator {
-    font-size: $smallish-font;
-  }
+.survey-page-block {
+  margin-bottom: $spacing * 3;
 }
 
-.translators-help {
-  text-align: center;
-  margin-top: $spacing * 2;
-  font-size: $medium-font;
-}
 
-.survey-credits {
-  margin-top: $spacing * 4;
-}
-
-.survey-credits-heading {
-  text-align: center;
+.survey-page-block-heading {
   margin-bottom: $spacing * 2;
-  font-size: $larger-font;
-}
-.survey-credits-items {
-  column-gap: $spacing * 2;
-  row-gap: $spacing * 2;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  @include small {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-.survey-credits-item {
-  display: flex;
-}
-.survey-credits-item-avatar {
-  margin-right: $spacing/2;
-  overflow: hidden;
-  border-radius: 100%;
-  height: 60px;
-  width: 60px;
-  img {
-    display: block;
-    height: 100%;
-    width: 100%;
-  }
-}
-.survey-credits-item-details {
-}
-.survey-credits-item-name {
-  font-size: $large-font;
-  margin-bottom: 3px;
-}
-.survey-credits-item-twitter {
-  margin-bottom: 0;
-  font-size: $small-font;
-}
-.survey-credits-item-role {
-  font-size: $small-font;
-  margin-bottom: 0;
+  text-align: center;
 }
