--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -88,6 +88,7 @@ $hover-color: $contrast-color;
 :root {
   --bg-color: #{$bg-color};
   --text-color: #{$text-color};
+  --text-color-inverted: #{$text-color-inverted};
   --link-color: #{$link-color};
   --hover-color: #{$contrast-color};
   --border-color: #{$border-color};
